feat(ISSUE-TEMPLATE): added feature,bug & other

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,9 +1,11 @@
 name: Greetings
 
 on:
-  push:
+  pull_request:
     branches:
       - develop
+  pull_request_target:
+    types: [opened, synchronize]
 
 jobs:
   greeting:
@@ -11,7 +13,7 @@ jobs:
     permissions:
       pull-requests: write
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        pr-message: "🎉 Welcome to your first pull request on the Readme-Shop repository! The Wisdom Fox community appreciates your contribution and can't wait to review your work. If you need any assistance or clarification, don’t hesitate to ask. Thanks for helping us improve Readme-Shop!"
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          pr-message: "🎉 Welcome to your first pull request on the Readme-Shop repository! The Wisdom Fox community appreciates your contribution and can't wait to review your work. If you need any assistance or clarification, don’t hesitate to ask. Thanks for helping us improve Readme-Shop!"
