--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
