--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "marked": "^14.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
