--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "dompurify": "^3.1.7",
+    "framer-motion": "^12.23.12",
     "marked": "^14.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
