--- a/package.json
+++ b/package.json
@@ -4,43 +4,56 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext js,jsx --fix",
     "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,json,css,md}\"",
+    "analyze": "vite build --mode analyze",
+    "clean": "rm -rf dist node_modules/.vite",
     "release": "semantic-release"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.4",
-    "dompurify": "^3.1.7",
-    "framer-motion": "^12.23.12",
-    "marked": "^14.1.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/material": "^6.5.0",
+    "dompurify": "^3.3.1",
+    "framer-motion": "^12.29.2",
+    "marked": "^14.1.4",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0",
-    "recoil": "^0.7.7",
-    "zustand": "^5.0.4"
+    "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.3",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.3",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@semantic-release/github": "^11.0.6",
+    "@types/dompurify": "^3.0.5",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react": "^7.37.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "semantic-release": "^24.2.7",
-    "vite": "^5.4.8"
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.26",
+    "globals": "^15.15.0",
+    "prettier": "^3.8.1",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "semantic-release": "^24.2.9",
+    "vite": "^5.4.21",
+    "vite-plugin-compression": "^0.5.1",
+    "web-vitals": "^5.1.0"
   }
 }
