--- a/.prettierrc
+++ b/.prettierrc
@@ -4,8 +4,9 @@
   "singleQuote": true,
   "tabWidth": 2,
   "printWidth": 80,
-  "jsxSingleQuote": false,
+  "jsxSingleQuote": true,
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "auto"
+  "endOfLine": "lf",
+  "bracketSameLine": true
 }
